# swbf-unmunge

./: .clang-format  .gitignore  CMakeLists.txt  dictionary.txt  license  readme.md  swbf-unmunge.sln  swbf-unmunge.vcxproj  swbf-unmunge.vcxproj.filters  third_party.md  vcpkg.json
.github/workflows/: cmake.yml
src/: D3D9TypesMinimal.h  app_options.cpp  app_options.hpp  assemble_chunks.cpp  assemble_chunks.hpp  bit_flags.hpp  byte.hpp  chunk_handlers.hpp  chunk_headers.hpp  chunk_processor.cpp  chunk_processor.hpp  cloth_converter.cpp  cloth_converter.hpp  explode_chunk.cpp  explode_chunk.hpp  file_saver.cpp  file_saver.hpp  glm_pod_wrappers.hpp  handle_cloth.cpp  handle_collision.cpp  handle_config.cpp  handle_localization.cpp  handle_lvl_child.cpp  handle_misc.cpp  handle_model.cpp  handle_object.cpp  handle_path.cpp  handle_planning.cpp  handle_planning_swbf1.cpp  handle_primitives.cpp  handle_script.cpp  handle_skeleton.cpp  handle_terrain.cpp  handle_texture.cpp  handle_texture_ps2.cpp  handle_texture_unix.cpp  handle_texture_xbox.cpp  handle_ucfb.cpp  handle_unknown.cpp  handle_world.cpp  (+49 more)
src/fx/: gltf.h  gltf_ms.h
src/lua/: lua4.cpp  lua4.hpp  lua4_decompiler.cpp  lua4_decompiler.hpp
src/unixport/: handle_texture_unix.cpp  image_converters_unix.cpp  image_converters_unix.h  mapped_file_unix.cpp
